--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>ComingSoon - Bootstrap Coming Soon Template</title>
+    <title>KIYA TRANSPORT LLC</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i">
     <link rel="stylesheet" href="assets/css/bootstrap-icons.css">
@@ -41,9 +41,9 @@
                 <form role="form" class="php-email-form" data-bss-recipient="520f6d525891e9dde4577e45f7880ca5">
                     <div class="subscribe-form"><input type="email" name="email"><input type="submit" value="Subscribe"></div>
                     <div class="mt-2">
-                        <div class="loading"><span>Loading</span></div>
+                       <!-- <div class="loading"><span>Loading</span></div>
                         <div class="error-message"></div>
-                        <div class="sent-message"><span>Your notification request was sent. Thank you!</span></div>
+                        <div class="sent-message"><span>Your notification request was sent. Thank you!</span></div>----->
                     </div>
                 </form>
             </div>
@@ -86,9 +86,9 @@
                             <div class="form-group mt-3"><input class="form-control form-control" type="text" name="subject" id="subject" placeholder="Subject" required=""></div>
                             <div class="form-group mt-3"><textarea class="form-control form-control" name="message" rows="5" placeholder="Message" required=""></textarea></div>
                             <div class="my-3">
-                                <div class="loading"><span>Loading</span></div>
+                               <!-- <div class="loading"><span>Loading</span></div>
                                 <div class="error-message"></div>
-                                <div class="sent-message"><span>Your message has been sent. Thank you!</span></div>
+                                <div class="sent-message"><span>Your message has been sent. Thank you!</span></div>---->
                             </div>
                             <div class="text-center"><button type="submit">Send Message</button></div>
                         </form>
