--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <div class="row">
                                 <div class="col-lg-4 info"><i class="bi bi-geo-alt"></i>
                                     <h4>Location:</h4>
-                                    <p>1639 CanAm Hwy, Colorado Springs.CO 80905, USA</p>
+                                    <p>102 S Tejon street,Suite 1100,  Colorado Springs.CO 80903, USA</p>
                                 </div>
                                 <div class="col-lg-4 info mt-4 mt-lg-0"><i class="bi bi-envelope"></i>
                                     <h4>Email:</h4>
@@ -99,7 +99,7 @@
     </main>
     <footer id="footer">
         <div class="container">
-            <div class="copyright"><span> © Copyright </span><strong><span>ComingSoon</span></strong><span>. All Rights Reserved </span></div>
+            <div class="copyright"><span> © Copyright </span><strong><span>Under Construction</span></strong><span>. All Rights Reserved </span></div>
             <div class="credits"><span> Designed by </span><a href="https://www.therobertsllc.com">The Robert's&nbsp; &nbsp;Marketing Agency</a></div>
         </div>
     </footer><a class="d-flex justify-content-center align-items-center back-to-top" href="#"><i class="bi bi-arrow-up-short"></i></a>
